# AgenticAML

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  SPEC.md  UI_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CBN_Compliance_Assurance_Report.md  cbn_compliance_matrix.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/proxy/: route.ts
frontend/src/components/: Alerts.tsx  Cases.tsx  CustomerOnboarding.tsx  Dashboard.tsx  EscalationPanel.tsx  Governance.tsx  Header.tsx  SARs.tsx  Sanctions.tsx  ScreenTransaction.tsx  TabNav.tsx  Transactions.tsx  WatchlistScreening.tsx
frontend/src/components/charts/: AlertTrend.tsx  RiskDistribution.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  Modal.tsx  Table.tsx
frontend/src/lib/: customerLookup.ts
review-results/: bandit-20260504-132359.txt  frontend-build-20260504-132359.txt  mypy-20260504-132359.txt  pytest-20260504-132359.txt  ruff-20260504-132359.txt  semgrep-20260504-132359.txt
scripts/: review-pipeline.sh
src/: database.py  main.py  models.py
src/agents/: case_manager.py  kyc_verifier.py  onboarding_screener.py  pattern_analyzer.py  sanctions_screener.py  sar_generator.py  transaction_monitor.py
src/data/: live_sanctions.py  sample_transactions.py  sanctions_lists.py  seed.py
src/data/cache/: un_consolidated_live.json
src/governance/: audit.py  engine.py  escalation.py  rules.py
src/monitoring/: __init__.py  continuous_monitor.py  list_manager.py
tests/: test_agents.py  test_api.py  test_database.py  test_governance.py
